[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/guiTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/battle/ui/BattleUI.gd" type="Script" id=2]
[ext_resource path="res://scene/gui/CharacterUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/gui/ItemUI.tscn" type="PackedScene" id=4]

[node name="MainGUI" type="Control"]
margin_right = 800.0
margin_bottom = 601.0
script = ExtResource( 2 )

[node name="DetailsUI" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 553.0
margin_right = 797.0
margin_bottom = 601.0
color = Color( 0.0862745, 0.0784314, 0.0784314, 1 )

[node name="DetailsLabel" type="Label" parent="DetailsUI"]
margin_left = 6.0
margin_top = 8.0
margin_right = 793.0
margin_bottom = 39.0
theme = ExtResource( 1 )
align = 1
valign = 1

[node name="TurnLabel" type="Label" parent="."]
margin_left = 602.0
margin_top = 30.0
margin_right = 784.0
margin_bottom = 61.0
theme = ExtResource( 1 )
text = "Turn: 0"
align = 1
valign = 1

[node name="PlayerStats" type="Control" parent="."]
margin_right = 275.0
margin_bottom = 56.0

[node name="PlayerHealth" type="Control" parent="PlayerStats"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Bg" type="ColorRect" parent="PlayerStats/PlayerHealth"]
margin_left = 10.0
margin_top = 24.0
margin_right = 317.0
margin_bottom = 61.0
color = Color( 0, 0, 0, 1 )

[node name="InnerBg" type="ColorRect" parent="PlayerStats/PlayerHealth/Bg"]
margin_left = 3.0
margin_top = 3.0
margin_right = 305.0
margin_bottom = 34.0
color = Color( 0.180392, 0.188235, 0.184314, 1 )

[node name="HealthBar" type="ColorRect" parent="PlayerStats/PlayerHealth"]
margin_left = 13.0
margin_top = 27.0
margin_right = 315.0
margin_bottom = 58.0
color = Color( 0.145098, 0.333333, 0.2, 1 )

[node name="HealthLabel" type="Label" parent="PlayerStats/PlayerHealth"]
margin_left = 20.0
margin_top = 27.0
margin_right = 290.0
margin_bottom = 58.0
theme = ExtResource( 1 )
text = "Health: 100"

[node name="EnemyHealth" type="Control" parent="PlayerStats"]
visible = false
margin_top = 57.0
margin_right = 40.0
margin_bottom = 97.0

[node name="Bg" type="ColorRect" parent="PlayerStats/EnemyHealth"]
margin_left = 10.0
margin_top = 24.0
margin_right = 317.0
margin_bottom = 61.0
color = Color( 0, 0, 0, 1 )

[node name="InnerBg" type="ColorRect" parent="PlayerStats/EnemyHealth/Bg"]
margin_left = 3.0
margin_top = 3.0
margin_right = 305.0
margin_bottom = 34.0
color = Color( 0.180392, 0.188235, 0.184314, 1 )

[node name="HealthBar" type="ColorRect" parent="PlayerStats/EnemyHealth"]
margin_left = 13.0
margin_top = 27.0
margin_right = 315.0
margin_bottom = 58.0
color = Color( 0.333333, 0.145098, 0.145098, 1 )

[node name="HealthLabel" type="Label" parent="PlayerStats/EnemyHealth"]
margin_left = 20.0
margin_top = 27.0
margin_right = 290.0
margin_bottom = 58.0
theme = ExtResource( 1 )
text = "Enemy Health: 100"

[node name="DeathUI" type="Control" parent="."]
margin_top = 161.0
margin_right = 801.0
margin_bottom = 503.0

[node name="Panel" type="Panel" parent="DeathUI"]
self_modulate = Color( 0.262745, 0.207843, 0.207843, 0.47451 )
margin_left = -1.0
margin_top = -158.0
margin_right = 798.0
margin_bottom = 436.0

[node name="Label" type="Label" parent="DeathUI/Panel"]
margin_left = 146.0
margin_top = 152.0
margin_right = 402.0
margin_bottom = 251.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
text = "YOU DIED!"
align = 1
valign = 1

[node name="Label2" type="Label" parent="DeathUI/Panel"]
margin_left = 476.0
margin_top = 492.0
margin_right = 776.0
margin_bottom = 591.0
theme = ExtResource( 1 )
text = "Press 'R' to restart"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 150.0
margin_right = 415.0
margin_bottom = 809.0
rect_scale = Vector2( 0.5, 0.5 )
alignment = 1

[node name="PanelContainer" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 17.0
margin_right = 400.0
margin_bottom = 174.0

[node name="PanelContainer2" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 178.0
margin_right = 400.0
margin_bottom = 335.0

[node name="PanelContainer3" parent="VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 322.0
margin_right = 200.0
margin_bottom = 479.0

[node name="PanelContainer5" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 339.0
margin_right = 400.0
margin_bottom = 481.0

[node name="PanelContainer4" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 485.0
margin_right = 400.0
margin_bottom = 642.0
